--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.6",
     "supports-color": "8.1.1",
     "typescript": "^5.0.4"
   },
