--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "algoliasearch": "^4.20.0",
     "eslint-config-next": "^14.0.3",
     "isomorphic-dompurify": "^1.8.0",
+    "lucide-react": "^0.293.0",
     "next": "^14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.6",
