--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reading-duration": "^1.1.1",
     "sharp": "^0.32.6",
     "supports-color": "8.1.1",
     "typescript": "^5.0.4"
