--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "^14.0.3",
     "isomorphic-dompurify": "^1.8.0",
     "lucide-react": "^0.293.0",
+    "million": "^2.6.4",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
