--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^2.0.0",
     "next": "^15.1.2",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.15",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
