--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "devd": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-tracking-marker": "^1.0.16",
     "react-map-gl": "^7.1.0",
     "tailwind-merge": "^2.5.5",
@@ -36,6 +38,7 @@
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.15",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
