--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.locatecontrol": "^0.83.1",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^2.0.0",
     "next": "^15.1.4",
@@ -38,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.15",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/leaflet.locatecontrol": "^0.74.6",
     "@types/leaflet.markercluster": "^1.5.5",
     "@types/node": "^20",
     "@types/react": "^19",
