--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/mapbox-gl": "^3.4.1",
     "@uidotdev/usehooks": "^2.4.1",
@@ -41,6 +44,7 @@
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/leaflet.locatecontrol": "^0.74.6",
     "@types/leaflet.markercluster": "^1.5.5",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
