--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@types/mapbox-gl": "^3.4.1",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
