--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.locatecontrol": "^0.83.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^2.0.0",
     "next": "^15.1.6",
@@ -47,6 +48,7 @@
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/leaflet.locatecontrol": "^0.74.6",
     "@types/leaflet.markercluster": "^1.5.5",
+    "@types/lodash": "^4.17.15",
     "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
